// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailAdministration component > renders a complete lease as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c2 {
  float: right;
  cursor: pointer;
  font-size: 3.2rem;
}

.c1 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2rem;
}

.c0 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c4.required::before {
  content: '*';
  position: absolute;
  top: 0.75rem;
  left: 0rem;
}

.c3 {
  font-weight: bold;
}

.c5 input.form-control {
  font-size: 1.8rem;
}

<div
    class="c0 form-section"
  >
    <h2
      class="c1"
    >
      <div
        class="no-gutters row"
      >
        <div
          class="col"
        >
          Administration
        </div>
        <div
          class="pl-8 d-flex align-items-end col-auto"
        >
          <svg
            class="c2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              collapse-section
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m7 14 5-5 5 5z"
            />
          </svg>
        </div>
      </div>
    </h2>
    <div
      class="collapse show"
    >
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Program:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="c5 input form-group"
          >
            <input
              class="form-control"
              id="input-programName"
              name="programName"
              title="A program"
              value="A program"
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Account type:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-type.description"
              name="type.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Receivable to:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-paymentReceivableType.description"
              name="paymentReceivableType.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Purpose(s):
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div>
            <div
              class="multiselect-container multiSelectContainer disable_ms "
              id="multiselectContainerReact"
              style="opacity: 1;"
            >
              <div
                class="search-wrapper searchWrapper "
                style="padding: 0px;"
              >
                <input
                  autocomplete="off"
                  class="searchBox "
                  disabled=""
                  id="search_input"
                  name="search_name_input"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
              <div
                class="optionListContainer displayNone"
              >
                <ul
                  class="optionContainer"
                >
                  <span
                    class="notFound"
                  >
                    No Options Available
                  </span>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Initiator:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-initiatorType.description"
              name="initiatorType.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Responsibility:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-responsibilityType.description"
              name="responsibilityType.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Effective date:
          </label>
        </div>
        <div
          class="c4 text-left col"
        />
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            MOTI contact:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-motiName"
              name="motiName"
              title="test moti name"
              value="test moti name"
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            MOTI region:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-region.description"
              name="region.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Intended use:
            <span>
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon-section-field-tooltip"
                id="section-field-tooltip"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </span>
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-description"
              name="description"
              title="a test description"
              value="a test description"
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Primary arbitration city:
          </label>
        </div>
        <div
          class="c4 text-left col"
          data-testid="primaryArbitrationCity"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-primaryArbitrationCity"
              name="primaryArbitrationCity"
              title="VICTORIA"
              value="VICTORIA"
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Lease notes:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          a test note
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DetailAdministration component > renders minimally as expected 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div />
  .c2 {
  float: right;
  cursor: pointer;
  font-size: 3.2rem;
}

.c1 {
  font-weight: bold;
  color: var(--theme-blue-100);
  border-bottom: 0.2rem var(--theme-blue-90) solid;
  margin-bottom: 2rem;
}

.c0 {
  margin: 1.6rem;
  padding: 1.6rem;
  background-color: white;
  text-align: left;
  border-radius: 0.5rem;
}

.c4.required::before {
  content: '*';
  position: absolute;
  top: 0.75rem;
  left: 0rem;
}

.c3 {
  font-weight: bold;
}

.c5 input.form-control {
  font-size: 1.8rem;
}

<div
    class="c0 form-section"
  >
    <h2
      class="c1"
    >
      <div
        class="no-gutters row"
      >
        <div
          class="col"
        >
          Administration
        </div>
        <div
          class="pl-8 d-flex align-items-end col-auto"
        >
          <svg
            class="c2"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              collapse-section
            </title>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="m7 14 5-5 5 5z"
            />
          </svg>
        </div>
      </div>
    </h2>
    <div
      class="collapse show"
    >
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Program:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="c5 input form-group"
          >
            <input
              class="form-control"
              id="input-programName"
              name="programName"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Account type:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-type.description"
              name="type.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Receivable to:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-paymentReceivableType.description"
              name="paymentReceivableType.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Purpose(s):
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div>
            <div
              class="multiselect-container multiSelectContainer disable_ms "
              id="multiselectContainerReact"
              style="opacity: 1;"
            >
              <div
                class="search-wrapper searchWrapper "
                style="padding: 0px;"
              >
                <input
                  autocomplete="off"
                  class="searchBox "
                  disabled=""
                  id="search_input"
                  name="search_name_input"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
              <div
                class="optionListContainer displayNone"
              >
                <ul
                  class="optionContainer"
                >
                  <span
                    class="notFound"
                  >
                    No Options Available
                  </span>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Initiator:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-initiatorType.description"
              name="initiatorType.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Responsibility:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-responsibilityType.description"
              name="responsibilityType.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Effective date:
          </label>
        </div>
        <div
          class="c4 text-left col"
        />
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            MOTI contact:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-motiName"
              name="motiName"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            MOTI region:
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-region.description"
              name="region.description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Intended use:
            <span>
              <span
                class="tooltip-icon"
                data-testid="tooltip-icon-section-field-tooltip"
                id="section-field-tooltip"
              >
                <svg
                  class="tooltip-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </span>
            </span>
          </label>
        </div>
        <div
          class="c4 text-left col"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-description"
              name="description"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Primary arbitration city:
          </label>
        </div>
        <div
          class="c4 text-left col"
          data-testid="primaryArbitrationCity"
        >
          <div
            class="input form-group"
          >
            <input
              class="form-control"
              id="input-primaryArbitrationCity"
              name="primaryArbitrationCity"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="pb-2 row"
      >
        <div
          class="pr-0 text-left col-3"
        >
          <label
            class="c3"
          >
            Lease notes:
          </label>
        </div>
        <div
          class="c4 text-left col"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
